--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,17 @@ Thumbs.db
 resources/lang/en/new-messages.php
 resources/lang/en/new-messages.php
 resources/lang/sa/new-messages.php
+resources/lang/en/new-messages.php
+public/json/admin/lang/sa.json
+resources/lang/sa/messages.php
+resources/lang/en/messages.php
+public/json/admin/lang/en.json
+resources/lang/en/new-messages.php
+resources/lang/sa/new-messages.php
+public/json/admin/lang/sa.json
+resources/lang/en/messages.php
+resources/lang/sa/messages.php
+public/json/admin/lang/en.json
+public/json/admin/lang/sa.json
+resources/lang/en/new-messages.php
+resources/lang/sa/new-messages.php
