--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,7 @@ public/json/admin/lang/en.json
 public/json/admin/lang/sa.json
 resources/lang/en/new-messages.php
 resources/lang/sa/new-messages.php
+
+# Report and export folders
+exports/
+report-doc/
